--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask-JWT-Extended==4.3.1
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.2
 Mako==1.1.5
